# PySide6-Structure-CI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: fetch_fonts.py
src/app/: main.py
src/app/assets/styles/: app.qss
src/app/core/: config.py  logging.py  theme.py
src/app/ui/: main_window.py
src/app/ui/pages/: dashboard_page.py  settings_page.py
src/app/ui/widgets/: header_bar.py  side_nav.py  status_bar.py
tests/gui/: test_main_window.py
tests/unit/: test_theme.py
